# OctoPrint-Telegram

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  PRIVACY.md  README.md  SECURITY.md  Taskfile.yml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  config.yml
.github/workflows/: build.yml  main.yml
dev_utils/: NOTES.txt  README.md
dev_utils/datastructures/octoprint/: file_metadata.py  (+3 more)
dev_utils/emoji/: update_unicode_emoji_dict.py
dev_utils/emojis/: emojiDict.py  generate_emojiDict.py
dev_utils/testBot/: README.md  __init__.py  emojiDict.py  settings_example.py  telegramCommands.py  telegramNotifications.py
extras/: telegram.md
octoprint_telegram/: __init__.py  emojiDict.py  telegramCommands.py  telegramNotifications.py  telegram_commands.py  telegram_notifications.py  telegram_utils.py
octoprint_telegram/commands/: base.py  cmd_abort.py  cmd_cancelobject.py  cmd_close.py  cmd_con.py  cmd_ctrl.py  cmd_dontshutup.py  cmd_filament.py  cmd_files.py  cmd_gcode.py  cmd_gif.py  cmd_help.py  cmd_home.py  cmd_photo.py  cmd_power.py  cmd_print.py  cmd_settings.py  cmd_shutup.py  cmd_start.py  cmd_status.py  cmd_supergif.py  cmd_sys.py  cmd_togglepause.py  cmd_tune.py  cmd_upload.py  cmd_user.py  commands.py
octoprint_telegram/emoji/: __init__.py  emoji.py  emojiDict.py  unicode_emoji_dict.py
octoprint_telegram/templates/: telegram_settings.jinja2  telegram_wizard.jinja2
octoprint_telegram/utils/: __init__.py  formatters.py  string_utils.py
(+4 files in other folders)
