[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-Telegram"
version = "1.8.0"
description = "Control your printer and receive notification messages via Telegram Messenger."
authors = [
    { name = "Jacopo Tediosi", email = "jacopotediosi@gmail.com" },
]
requires-python = ">=3.7,<4"
dependencies = [
    "pillow",
    "requests[socks]",
]
dynamic = [
    "license",
]

[project.entry-points."octoprint.plugin"]
telegram = "octoprint_telegram"

[project.urls]
Homepage = "https://github.com/jacopotediosi/OctoPrint-Telegram"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]

[project.readme]
file = "README.md"
content-type = "markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_telegram",
    "octoprint_telegram.*",
]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.djlint]
no_set_formatting=true
ignore="H008,H021,H023"

[tool.codespell]
skip = "octoprint_telegram/emoji/unicode_emoji_dict.py"
